--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         separate <code>alert()</code> calls).
       </li>
     </ol>
-    <script src="assignment.js"></script>
+    <!-- <script src="assignment.js"></script>-->
+    <script src="objects.js"></script>
   </body>
 </html>
